# git-instafix

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  release.toml
.github/workflows/: release.yml  rust.yml
ci/: before_deploy.sh  build-release-artifacts.sh  build.sh  build_musl.sh  deploy_utils.sh  install.sh  utils.sh
src/: config.rs  lib.rs  main.rs  patcher.rs  rebaser.rs  selecter.rs
src/patcher/: diff_ui.rs
tests/: basic.rs
wix/: main.wxs
