[package]
name = "git-fixup"
version = "0.1.8"
authors = ["Brandon W Maister <quodlibetor@gmail.com>"]
edition = "2021"
default-run = "git-fixup"

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.11", features = ["derive", "env", "wrap_help"] }
console = "0.15.0"
dialoguer = "0.10.1"
git2 = { version = "0.14.4", default_features = false }

[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
itertools = "0.10.3"
