[package]
name = "git-instafix"
version = "0.2.2"
authors = ["Brandon W Maister <quodlibetor@gmail.com>"]
edition = "2021"
default-run = "git-instafix"
publish = false
repository = "https://github.com/quodlibetor/git-instafix"
description = """Apply staged git changes to an ancestor git commit.
"""

[package.metadata.wix]
upgrade-guid = "F5B771EA-3725-4523-9EE3-06FA112A5573"
path-guid = "A8CD8E47-6A93-4B11-B617-865BFCA4C29F"
license = false
eula = false

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
clap = { version = "4.5.1", features = ["derive", "env", "wrap_help"] }
console = "0.15.8"
dialoguer = "0.11.0"
git2 = { version = "0.18.2", default-features = false }
syntect = "5.2.0"

[dev-dependencies]
assert_cmd = "2.0.13"
assert_fs = "1.1.1"
itertools = "0.12.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.dist]
dist = true

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.10.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "homebrew", "msi"]
# A GitHub repo to push Homebrew formulas to
tap = "quodlibetor/homebrew-git-tools"
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "x86_64-pc-windows-msvc",
]
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.xz"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
publish-prerelease = true
# Publish jobs to run in CI
pr-run-mode = "plan"
